--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
 		<bootstrap.version>3.2.0</bootstrap.version>
 		<commons-fileupload.version>1.3.2</commons-fileupload.version>
 		<log4j.version>1.2.17</log4j.version>
+		<springfox-swagger2.version>2.5.0</springfox-swagger2.version>
+		<springfox-swagger-ui>2.5.0</springfox-swagger-ui>
+		
+		
 	</properties>
 
 	<dependencies>
@@ -84,7 +88,19 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox-swagger-ui}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox-swagger2.version}</version>
+            <scope>compile</scope>
+        </dependency>	
 	</dependencies>
     
     <build>
